# NyxAI

./: .gitignore  Dockerfile  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.embedded.yml  docker-compose.yml  pyproject.toml  test_system.py
.github/workflows/: cd.yml  ci.yml
.trae/documents/: agent_skills_system_plan.md  aiops_system_plan.md  logging-enhancement-plan.md
.trae/skills/action-execution/: SKILL.md
.trae/skills/anomaly-detection/: SKILL.md
.trae/skills/llm-analysis/: SKILL.md
.trae/skills/metric-collection/: SKILL.md
.trae/skills/risk-assessment/: SKILL.md
.trae/skills/strategy-matching/: SKILL.md
.trae/skills/topology-analysis/: SKILL.md
.trae/specs/create-frontend-ui/: checklist.md  spec.md  tasks.md
.trae/specs/implement-aiops-core/: checklist.md  spec.md  tasks.md
.trae/specs/simplify-project/: checklist.md  spec.md  tasks.md
backend/: .env.example  check_db.py  check_sessions.py  migrate_db.py  pyproject.toml  test_api.py
backend/app/: config.py  main.py
backend/app/agents/: base.py  diagnosis.py  investigation.py  orchestrator.py  recovery.py
backend/app/api/: agent_configs.py  chat.py  datasources.py  knowledge.py  schemas.py  sessions.py  webhook.py  websocket.py
backend/app/models/: agent.py  agent_config.py  datasource.py  evidence.py  knowledge.py  session.py
backend/app/services/: connection_tester.py  document_parser.py  llm.py  vector_store.py
backend/app/skills/: __init__.py  loader.py  registry.py  types.py
backend/app/storage/: database.py  models.py
backend/app/storage/repositories/: agent_config_repo.py  agent_exec_repo.py  datasource_repo.py  evidence_repo.py  session_repo.py
backend/app/tools/: influxdb.py  jaeger.py  knowledge.py  loki.py  prometheus.py
backend/app/utils/: logger.py
backend/skills/brainstorming/: SKILL.md
backend/skills/systematic-debugging/: SKILL.md
backend/tests/: conftest.py
backend/tests/test_agents/: test_config_loading.py  test_diagnosis.py  test_investigation.py  test_orchestrator.py  test_recovery.py
backend/tests/test_api/: test_agent_configs.py  test_config.py  test_database.py  test_logger.py  test_main.py  test_sessions.py
backend/tests/test_models/: test_agent_config.py
backend/tests/test_services/: test_llm.py
backend/tests/test_skills/: test_agent_integration.py  test_loader.py  test_registry.py  test_types.py
backend/tests/test_storage/: test_agent_config_repo.py
deployments/docker/: .env.example  prometheus.yml
deployments/docker/loki/: loki-config.yaml  promtail-config.yaml
docs/: guide.md
docs/superpowers/plans/: 2026-03-21-agent-chat-enhancement-plan.md  2026-03-21-nyxai-implementation.md  2026-03-22-skill-system-integration-plan.md  2026-03-26-agent-config-plan.md  2026-04-08-ptal-gat-integration-plan.md
docs/superpowers/specs/: 2026-03-21-agent-chat-enhancement-design.md  2026-03-21-nyxai-ops-agent-design.md  2026-03-22-agent-skill-system-design.md  2026-03-22-skill-system-integration-design.md  2026-03-26-agent-config-design.md  2026-04-08-ptal-gat-integration-design.md
frontend/: index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.tsx  main.tsx
frontend/src/components/Agent/: AgentCard.tsx  AgentProcessPanel.tsx  HandoffIndicator.tsx  ThinkingStream.tsx  ToolCallItem.tsx
frontend/src/components/AgentConfig/: ConfigEditor.tsx  SkillSelector.tsx  VersionHistory.tsx
frontend/src/components/Chat/: ChatWindow.tsx
frontend/src/components/Evidence/: CausalGraph.tsx  EvidenceChain.tsx  EvidenceTimeline.tsx
frontend/src/components/LanguageSwitcher/: index.tsx
frontend/src/components/Layout/: MainLayout.tsx  styles.module.css
frontend/src/components/Session/: SessionList.tsx  SessionSidebar.tsx  SessionToolbar.tsx
frontend/src/components/Settings/: DataSourceForm.tsx  DataSourceList.tsx  KnowledgeForm.tsx  KnowledgeList.tsx  SettingsPage.tsx  SettingsSidebar.tsx  SlidePanel.tsx
frontend/src/components/Timeline/: TimelineNode.tsx  VerticalTimeline.tsx
frontend/src/i18n/: index.ts
frontend/src/i18n/locales/: en-US.json  zh-CN.json
frontend/src/pages/Anomalies/: Detail.module.css  Detail.tsx  index.tsx  styles.module.css
frontend/src/pages/Dashboard/: index.tsx  styles.module.css
frontend/src/pages/Login/: index.tsx  styles.module.css
frontend/src/router/: index.tsx
frontend/src/services/: agentConfigApi.ts  api.ts  datasourceApi.ts  knowledgeApi.ts  websocket.ts
frontend/src/store/: authStore.ts
frontend/src/stores/: agentStore.ts  sessionStore.ts  settingsStore.ts
frontend/src/styles/: index.css
frontend/src/types/: agent.ts  agentConfig.ts  datasource.ts  index.ts  knowledge.ts
k8s/base/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  rbac.yaml  secret.yaml  service.yaml
scripts/: dev-start.bat  dev-start.ps1  dev-start.py
src/nyxai/: __init__.py  config.py  types.py  utils.py
src/nyxai/agents/: __init__.py  analyze.py  base.py  decide.py  execute.py  monitor.py
src/nyxai/api/: __init__.py  auth.py  dependencies.py  main.py  response.py
src/nyxai/api/routes/: auth.py  (+8 more)
src/nyxai/collectors/: __init__.py  events.py  logs.py  metrics.py
src/nyxai/detection/: __init__.py  base.py
src/nyxai/knowledge_base/: __init__.py  incident_kb.py
src/nyxai/llm/: __init__.py
src/nyxai/rca/: __init__.py
src/nyxai/recovery/: __init__.py
src/nyxai/skills/: __init__.py  base.py  loader.py  registry.py
src/nyxai/storage/: __init__.py  cache.py  database.py  models.py  prometheus_client.py  vector_store.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py
tests/unit/detection/: test_anomaly_model.py  test_statistical_detector.py
(+55 files in other folders)
